@@ -2,7 +2,7 @@ Author: <andrea.de.iacovo@gmail.com>
 Description: Fixing reame file
 --- a/readme.html
 +++ b/readme.html
-@@ -102,7 +102,7 @@
+@@ -89,7 +89,7 @@
  <p>WordPress is the official continuation of <a href="http://cafelog.com/">b2/caf&#233;log</a>, which came from Michel V. The work has been continued by the <a href="http://wordpress.org/about/">WordPress developers</a>. If you would like to support WordPress, please consider <a href="http://wordpress.org/donate/" title="Donate to WordPress">donating</a>.</p>
  
  <h1>License</h1>
